--- a/SD_img2img.ipynb
+++ b/SD_img2img.ipynb
@@ -8,7 +8,6 @@
    "source": [
     "import torch\n",
     "from PIL import Image\n",
-    "from io import BytesIO\n",
     "\n",
     "from diffusers import StableDiffusionImg2ImgPipeline"
    ]
@@ -23,7 +22,8 @@
     "model_id_or_path = \"runwayml/stable-diffusion-v1-5\"\n",
     "pipe = StableDiffusionImg2ImgPipeline.from_pretrained(\n",
     "    model_id_or_path, \n",
-    "    torch_dtype=torch.float16)\n",
+    "    torch_dtype=torch.float16\n",
+    "    )\n",
     "pipe = pipe.to(device)"
    ]
   },
